--- a/index.html
+++ b/index.html
@@ -11,8 +11,41 @@
 <body>
     <header></header>
     <main>
-
+        <section class="carousel">
+            <section class="artistinfo">
+                <h2 id="artistname">Artist Name</h2>
+                <div id="image" alt="image of cover art for current artist"></div>
+            </section>
+            <section class="topsongs">
+                <h2 id="toptracks">Top Tracks by Artist</h2>
+                <section class="tracklist">
+                    <ul id="bestof">
+                        <li id="songlist1"></li>
+                        <li id="songlist2"></li>
+                        <li id="songlist3"></li>
+                        <li id="songlist4"></li>
+                        <li id="songlist5"></li>
+                    </ul>
+                </section>
+            </section>
+            <section class="albums">
+                <h2 id="knownalbum">Artist Albums</h2>
+                <section class="albumlist">
+                    <ul id="listedalbums">
+                        <li id="album1"></li>
+                        <li id="album2"></li>
+                        <li id="album3"></li>
+                        <li id="album4"></li>
+                        <li id="album5"></li>
+                    </ul>
+                </section>
+                <section class="artistsummary">
+                    <article id="briefsnip">
+                        <p id="snip"></p>
+                    </article>
+                </section>
+            </section>
+        </section>
     </main>
-    
 </body>
 </html>
