--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/style.css">
     <script defer src="./assets/script/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Document</title>
 </head>
 <body>
     <header></header>
     <main>
-
+<section id="bio">
+    <h2 id="bio-text">About the Artist</h2>
+    <ul>
+        <li>Birthday:</li>
+        <li>Living or Dead:</li>
+        <li>Status of Band:</li>
+        <li>About:</li>
+    </ul>
+</section>
+<section id="related">
+    <h2 id="related-text">Related Acts</h2>
+    <ul>
+        <li id="related-1"></li>
+        <li id="related-2"></li>
+        <li id="related-3"></li>
+    </ul>
+</section>
     </main>
     
 </body>
