--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 <ul class="left hide-on-med-and-down">
                     <nav>
                         <div class="nav-wrapper">
-                          <form>
-                            <div class="input-field">
-                              <input id="search" type="search" required>
-                              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                              <i class="material-icons">close</i>
-                            </div>
-                          </form>
+                            <form>
+                                <div class="input-field">
+                                    <input id="search" type="search" required>
+                                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                                    <i class="material-icons">close</i>
+                                </div>
+                            </form>
                         </div>
-                      </nav>
+                    </nav>
                 </ul>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="bio">Bio</a></li>
@@ -41,7 +41,21 @@
 
     </main>
     <footer>
-        
+        <nav>
+            <div class="nav-wrapper">
+                <div>
+                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Kitty logo"
+                        class="responsive">
+                </div>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="https://github.com/unheardof77">Morgan Tolman</a></li>
+                    <li><a href="https://github.com/LeoRocca40">Leo Roccaforte</a></li>
+                    <li><a href="https://github.com/FunnyLookingFish">Lu Morales</a></li>
+                    <li><a href="https://github.com/IAMFALZIII">Fernando Zamora</a></li>
+                    <li><a href="https://github.com/joyhaliday">Joy Haliday</a></li>
+                </ul>
+            </div>
+        </nav>
     </footer>
 
 </body>
