Got display Function to work.  Safe revert point.

--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@
             <section class="topsongs">
                 <h2 id="toptracks">Top Tracks by Artist</h2>
                 <section class="tracklist">
-                    <ul id="bestof">
-                        <li id="songlist1"></li>
-                        <li id="songlist2"></li>
-                        <li id="songlist3"></li>
-                        <li id="songlist4"></li>
-                        <li id="songlist5"></li>
+                    <ul id="bestOf">
                     </ul>
                 </section>
             </section>
