--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     <footer>
         <nav>
             <div class="nav-wrapper">
-                <div>
+                <!-- <div>
                     <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Kitty logo"
                         class="responsive">
-                </div>
+                </div> -->
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="https://github.com/unheardof77">Morgan Tolman</a></li>
                     <li><a href="https://github.com/LeoRocca40">Leo Roccaforte</a></li>
