--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo center">Very extremely creative title I forgot</a>
+                <a href="#!" class="brand-logo center">The Music Index</a>
                 <ul class="left hide-on-med-and-down">
                     <nav>
                         <div class="nav-wrapper">
@@ -38,23 +38,23 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <section class="carousel">
-            <section class="artistinfo">
-                <h2 id="artistname">Artist Name</h2>
+            <section class="artistInfo">
+                <h2 id="artistName">Artist Name</h2>
                 <div id="image" alt="image of cover art for current artist"></div>
             </section>
-            <section class="topsongs">
-                <h2 id="toptracks">Top Tracks by Artist</h2>
-                <section class="tracklist">
+            <section class="topSongs">
+                <h2 id="topTracks">Top Tracks by Artist</h2>
+                <section class="trackList">
                     <ul id="bestOf">
                     </ul>
                 </section>
             </section>
             <section class="albums">
-                <h2 id="knownalbum">Artist Albums</h2>
-                <section class="albumlist">
-                    <ul id="listedalbums">
+                <h2 id="knownAlbum">Artist Albums</h2>
+                <section class="albumList">
+                    <ul id="listedAlbums">
                         <li id="album1"></li>
                         <li id="album2"></li>
                         <li id="album3"></li>
@@ -62,8 +62,8 @@
                         <li id="album5"></li>
                     </ul>
                 </section>
-                <section class="artistsummary">
-                    <article id="briefsnip">
+                <section class="artistSummary">
+                    <article id="briefSnip">
                         <p id="snip"></p>
                     </article>
                 </section>
