added card style to cover art, tracks, and albums

--- a/index.html
+++ b/index.html
@@ -41,26 +41,37 @@
     <main class="main">
         <section class="carousel">
             <section class="artistInfo">
-                <h2 id="artistName">Artist Name</h2>
-                <div id="image" alt="image of cover art for current artist"></div>
+                <div class="card">
+                    <img src="" alt="coverArt" style="width:100%">
+                    <div class="container">
+                        <h2 id="artistName">Artist Name</h2>
+                    </div>
+                </div>
             </section>
             <section class="topSongs">
-                <h2 id="topTracks">Top Tracks by Artist</h2>
-                <section class="trackList">
-                    <ul id="bestOf">
-                    </ul>
+                <div class="card">
+                    <div class="container">
+                        <h2 id="topTracks">Top Tracks by Artist</h2>
+                        <section class="trackList">
+                            <ul id="bestOf"></ul>
+                    </div>
+                </div>
                 </section>
             </section>
             <section class="albums">
-                <h2 id="knownAlbum">Artist Albums</h2>
-                <section class="albumList">
-                    <ul id="listedAlbums">
-                        <li id="album1"></li>
-                        <li id="album2"></li>
-                        <li id="album3"></li>
-                        <li id="album4"></li>
-                        <li id="album5"></li>
-                    </ul>
+                <div class="card">
+                    <div class="container">
+                        <h2 id="knownAlbum">Artist Albums</h2>
+                        <section class="albumList">
+                            <ul id="listedAlbums">
+                                <li id="album1"></li>
+                                <li id="album2"></li>
+                                <li id="album3"></li>
+                                <li id="album4"></li>
+                                <li id="album5"></li>
+                            </ul>
+                    </div>
+                </div>
                 </section>
                 <section class="artistSummary">
                     <article id="briefSnip">
