--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo center">Very extremely creative title I forgot</a>
+                <a href="#!" class="brand-logo center">onlydrake.org</a>
                 <ul class="left hide-on-med-and-down">
                     <nav>
                         <div class="nav-wrapper">
