Added event listener for submit.  Made artist name appear.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="card">
                     <img src="" alt="coverArt" style="width:100%">
                     <div class="container">
-                        <h2 id="artistName">Artist Name</h2>
+                        <h2 id="artistName"></h2>
                     </div>
                 </div>
             </section>
