to pull changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="bio">Bio</a></li>
-                    <li><a href="image">Images</a></li>
+                    <li><a href="artistImg">Images</a></li>
                 </ul>
             </div>
         </nav>
