--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Kitty logo"
                         class="responsive">
                 </div> -->
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <ul class="flex mx-auto text-gray-700 text-sm text-center sm:text-left">
                     <li><a href="https://github.com/unheardof77">Morgan Tolman</a></li>
                     <li><a href="https://github.com/LeoRocca40">Leo Roccaforte</a></li>
                     <li><a href="https://github.com/FunnyLookingFish">Lu Morales</a></li>
