added overall doc font styling

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <body>
     <header>
-        <nav>
-            <div class="nav-wrapper">
+        <nav class="nav-wrapper">
                 <a href="#!" class="brand-logo center">The Music Index</a>
                 <ul class="left hide-on-med-and-down">
                     <nav>
@@ -35,7 +34,7 @@
                     <li><a href="bio">Bio</a></li>
                     <li><a href="image">Images</a></li>
                 </ul>
-            </div>
+         
         </nav>
     </header>
     <main class="main">
