changed class and id names to better style out sections independantly

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo center">The Music Index</a>
+                <a href="#!" class="brand-logo center" id="title-name"><b>The Music Index</b></a>
                 <ul class="left hide-on-med-and-down">
                     <nav>
                         <div class="nav-wrapper">
@@ -32,7 +32,7 @@
                     </nav>
                 </ul>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="bio">Bio</a></li>
+                    <li><a href="#bio">Bio</a></li>
                     <li><a href="image">Images</a></li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
             <section class="topSongs">
                 <div class="card">
                     <div class="container">
-                        <h2 id="topTracks">Top Tracks by Artist</h2>
+                        <h2 id="topTracks">Top Tracks</h2>
                         <section class="trackList">
                             <ul id="bestOf"></ul>
                     </div>
@@ -76,11 +76,11 @@
         <section class="row">
         <section id="bio" class="col s12">
             <h2 id="bio-text" class="card-panel teal lighten-2">About the Artist</h2>
-            <ul>
-                <li>Birthday:</li>
-                <li>Living or Dead:</li>
-                <li>Status of Band:</li>
-                <li>About:</li>
+            <ul class="stats">
+                <li id="stat1">Birthday:</li>
+                <li id="stat2">Living or Dead:</li>
+                <li id="stat3">Status of Band:</li>
+                <li id="stat4">About:</li>
             </ul>
         </section>
         <section id="related" class="col s12">
@@ -110,7 +110,6 @@
             </div>
         </nav>
     </footer>
-
 </body>
 
 </html>
