added loading bar

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 </ul>
             </div>
         </nav>
+        <!-- This is the loading bar -->
+        <div class="progress">
+            <div class="indeterminate"></div>
+        </div>
     </header>
     <main class="main">
         <section class="carousel">
