--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
     <header>
-        <nav class="nav-wrapper">
+        <nav class="header-footer">
+            <div class="nav-wrapper">
                 <a href="#!" class="brand-logo center">The Music Index</a>
                 <ul class="left hide-on-med-and-down">
                     <nav>
@@ -34,7 +35,7 @@
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="#artistImg">Images</a></li>
                 </ul>
-         
+            </div>
         </nav>
         <!-- This is the loading bar -->
         <div class="progress">
