Troubleshooting loading screen.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo center">The Music Index</a>
+                <a href="#!" class="brand-logo center displayLoading">The Music Index</a>
                 <ul class="left hide-on-med-and-down">
                     <nav>
                         <div class="nav-wrapper">
