Added js for Bio and related artist

--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
                 </section>
             </section>
         </section>
-        <section id="bio">
-            <h2 id="bio-text">About the Artist</h2>
-            <ul>
-                <li>Birthday: <span id="artistBirthday"></span></li>
-                <li>Living or Dead: <span id="artistLivingStatus"></span></li>
-                <li>Status of Band: <span id="artistBandStatus"></span></li>
-                <li>About: <span id="artistAbout"></span></li>
-            </ul>
-        </section>
-        <section id="related">
-            <h2 id="related-text">Related Acts</h2>
-            <ul>
-                <li id="related-1"></li>
-                <li id="related-2"></li>
-                <li id="related-3"></li>
-            </ul>
+        <section>
+            <div class="mb-4 p-4 w-full flex flex-col mb-16 items-center text-center">
+                <h1>
+                    Bio
+                </h1>
+                <p id="bio">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam obcaecati repudiandae deserunt tempore nesciunt, suscipit possimus incidunt accusantium autem saepe molestiae! Magnam nemo porro rerum soluta dolore asperiores, minus earum.
+                </p>
+                <h1>
+                    Related/Similar Artists
+                </h1>
+                
+                <p id="related" class="text-black max-w-3xl mb-6 leading-relaxed text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum maiores nobis veniam delectus accusantium perspiciatis, nesciunt eos, quidem atque, ducimus suscipit vel dolores? Obcaecati vero incidunt quis repellendus aut!.
+                </p>
+            </div>
         </section>
     </main>
     <footer>
