additional css styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#!" class="brand-logo center">The Music Index</a>
                 <ul class="left hide-on-med-and-down">
                     <nav>
-                        <div class="nav-wrapper" style="background: #566266;">
+                        <div class="nav-wrapper">
                             <form class="inputColor">
                                 <div class="input-field">
                                     <input id="search" type="search" required>
