updated css and html changes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
         <section class="row">
         <section id="bio" class="col s12">
-            <h2 id="bio-text" class="card-panel teal lighten-2">About the Artist</h2>
+            <h2 id="bio-text">About the Artist</h2>
             <ul class="stats">
                 <li id="stat1">Birthday:</li>
                 <li id="stat2">Living or Dead:</li>
