Saving bfore pull

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </section>            
             <section class="artistInfo">
                 <div class="card-image" style="background: #073245;">
-                    <img src="" alt="coverArt" style="width:100%">
+                    <img id="artistImg" alt="coverArt" style="width:100%">
                     <div class="container">
                         <h2 id="artistName">Artist Name</h2>
                     </div>
