Added comments and formated javaScript. Safe revert point.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
         <section id="related" class="col s12">
             <h2 id="related-text">Related Acts</h2>
-            <ul>
+            <ul id="relatedArtist">
                 <li id="related-1"></li>
                 <li id="related-2"></li>
                 <li id="related-3"></li>
