--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                         <div class="nav-wrapper">
                             <form class="inputColor">
                                 <div class="input-field">
-                                    <input id="search" type="search" required>
+                                    <input id="search" type="search" placeholder="Search for an artist" required>
                                     <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                                    <i class="material-icons">close</i>
+                                    <i id="searchX" class="material-icons">close</i>
                                 </div>
                             </form>
                         </div>
