--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
     <footer>
         <nav class="header-footer" style="background: #073245;">
             <div class="nav-wrapper">
-                <!-- <div>
-                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Kitty logo"
-                        class="responsive">
+                <!-- <div class="responsive">
+                    <img class="left hide-on-med-and-down" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Kitty logo">
                 </div> -->
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="https://github.com/unheardof77" target="_blank" rel="noopener noreferrer">Morgan Tolman</a></li>
