updated formatting to body elements

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="card" style="background: #073245;">
                     <div class="container">
                         <h2 id="knownAlbum">Artist Albums</h2>
-                        <section class="albumList">
+                        <section class="albumList" style="width:100%">
                             <ul id="listedAlbums">
                             </ul>
                     </div>
@@ -70,6 +70,7 @@
         <section class="row">
         <section id="bio" class="col s12">
             <h2 id="bio-text">About the Artist</h2>
+    
         </section>
         <section id="related" class="col s12">
             <h2 id="related-text">Related Acts</h2>
