Saving before pull

--- a/index.html
+++ b/index.html
@@ -87,23 +87,31 @@
         </section>
     </section>
     </main>
-    <footer>
-        <nav class="header-footer" style="background: #073245;">
-            <div class="nav-wrapper">
-                <!-- <div>
-                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Kitty logo"
-                        class="responsive">
-                </div> -->
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="https://github.com/unheardof77" target="_blank" rel="noopener noreferrer">Morgan Tolman</a></li>
-                    <li><a href="https://github.com/LeoRocca40" target="_blank" rel="noopener noreferrer">Leo Roccaforte</a></li>
-                    <li><a href="https://github.com/FunnyLookingFish" target="_blank" rel="noopener noreferrer">Lu Morales</a></li>
-                    <li><a href="https://github.com/IAMFALZIII" target="_blank" rel="noopener noreferrer">Fernando Zamora</a></li>
-                    <li><a href="https://github.com/joyhaliday" target="_blank" rel="noopener noreferrer">Joy Haliday</a></li>
+    <footer class="page-footer" style="background: #073245;">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">Footer Content</h5>
+              <p class="grey-text text-lighten-4">Checkout our GitHubs!</p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <ul class="col s2.2">
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/unheardof77" target="_blank" rel="noopener noreferrer">Morgan Tolman</a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/LeoRocca40" target="_blank" rel="noopener noreferrer">Leo Roccaforte</a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/FunnyLookingFish" target="_blank" rel="noopener noreferrer">Lu Morales</a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/IAMFALZIII" target="_blank" rel="noopener noreferrer">Fernando Zamora</a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/joyhaliday" target="_blank" rel="noopener noreferrer">Joy Haliday</a></li>
                 </ul>
             </div>
-        </nav>
-    </footer>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container" style="background: #073245;">
+          © 2022 Copyright Text
+          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
