--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
             </section>
         </section>
         <section class="row">
-        <section id="bio" class="col s12">
-            <h2 id="bio-text">About the Artist</h2>
+            <section id="bio" class="">
+                <h2 id="bio-text">About the Artist</h2>
+            </section>
+            <section id="related" class="">
+                <h2 id="related-text">Related Acts</h2>
+                <ul id="relatedArtist">
+                    <li id="related-1"></li>
+                    <li id="related-2"></li>
+                    <li id="related-3"></li>
+                </ul>
+            </section>
         </section>
-        <section id="related" class="col s12">
-            <h2 id="related-text">Related Acts</h2>
-            <ul id="relatedArtist">
-                <li id="related-1"></li>
-                <li id="related-2"></li>
-                <li id="related-3"></li>
-            </ul>
-        </section>
-    </section>
     </main>
     <footer>
         <nav class="header-footer" style="background: #073245;">
