--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </ul>
             </div>
         </nav>
-        <!-- This is the loading bar -->
+        <!-- This is the loading bar
         <div class="progress">
             <div class="indeterminate"></div>
-        </div>
+        </div> -->
     </header>
     <main class="main">
         <section class="carousel">
@@ -53,7 +53,7 @@
                 </div>
             </section>            
             <section class="artistInfo">
-                <div style="background: #073245;">
+                <div class="artistImage" style="background: #073245;">
                     <img id="artistImg" alt="coverArt">
                     <div>
                         <h3 id="artistName">Artist Name</h3>
