added html and css styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- This is the loading bar -->
         <div class="progress">
             <div class="indeterminate"></div>
-        </div>
+        </div> 
     </header>
     <main class="main">
         <section class="carousel">
@@ -53,10 +53,11 @@
                 </div>
             </section>            
             <section class="artistInfo">
+                <h3 id="artistName">Artist Name</h3>
                 <div style="background: #073245;">
                     <img id="artistImg" alt="coverArt">
                     <div>
-                        <h3 id="artistName">Artist Name</h3>
+                        
                     </div>
                 </div>
             </section>
@@ -74,13 +75,11 @@
         <section class="row">
         <section id="bio" class="col s12">
             <h2 id="bio-text">About the Artist</h2>
+            <p id="bioInfo"></p>
         </section>
         <section id="related" class="col s12">
             <h2 id="related-text">Related Acts</h2>
             <ul id="relatedArtist">
-                <li id="related-1"></li>
-                <li id="related-2"></li>
-                <li id="related-3"></li>
             </ul>
         </section>
     </section>
