With help of instructor fixed issues with css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div> -->
     </header>
     <main class="main">
-        <section class="carousel">
+        <section class="carousel cutom-carousel">
             <section class="topSongs">
                 <div style="background: #073245;">
                     <div>
