added grey background styling to information displayed

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             </section>
         </section>
         <section class="row">
-            <section id="bio" class="">
+            <section id="bio" >
                 <h2 id="bio-text">About the Artist</h2>
                 <p id="bioInfo"></p>
             </section>
-            <section id="related" class="">
+            <section id="related" >
                 <h2 id="related-text">Related Acts</h2>
                 <ul id="relatedArtist">
                     <li id="related-1"></li>
