adjusted bio and related sections to create space between them

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             </section>
         </section>
         <section class="row">
-            <section id="bio" >
+            <section id="bio" style="margin-right: 20px;">
                 <h2 id="bio-text">About the Artist</h2>
                 <p id="bioInfo"></p>
             </section>
-            <section id="related" >
+            <section id="related" style="margin-left: 20px;">
                 <h2 id="related-text">Related Acts</h2>
                 <ul id="relatedArtist">
                     <li id="related-1"></li>
