removed copyright info from nav bar and removed not needed div

--- a/index.html
+++ b/index.html
@@ -80,9 +80,6 @@
             <section id="related" style="margin-left: 20px;">
                 <h2 id="related-text">Related Acts</h2>
                 <ul id="relatedArtist">
-                    <li id="related-1"></li>
-                    <li id="related-2"></li>
-                    <li id="related-3"></li>
                 </ul>
             </section>
         </section>
@@ -100,16 +97,9 @@
                     <li><a href="https://github.com/IAMFALZIII" target="_blank" rel="noopener noreferrer">Fernando Zamora</a></li>
                     <li><a href="https://github.com/joyhaliday" target="_blank" rel="noopener noreferrer">Joy Haliday</a></li>
                 </ul>
-            </div>
-          </div>
-        </div>
-        <div class="footer-copyright">
-          <div class="container" style="background: #073245;">
-          © 2022 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-          </div>
-        </div>
-      </footer>
+            </div>    
+        </nav>
+    </footer>
 </body>
 
 </html>
