Added a loading bar to display  when page is loading.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </ul>
             </div>
         </nav>
-        <!-- This is the loading bar
-        <div class="progress">
+        
+        <div id="loadingBar" class="progress">
             <div class="indeterminate"></div>
-        </div> -->
+        </div>
     </header>
     <main class="main">
         <section class="carousel cutom-carousel">
