--- a/mobile.html
+++ b/mobile.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./mobile/mobile.css">
+    <link rel="stylesheet" href="./assets/style/mobile.css">
+    <script defer src="./assets/script/redirecttoindex.js"></script>
     <script defer src="./assets/script/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>The Music Index</title>
