--- a/mobile.html
+++ b/mobile.html
@@ -36,47 +36,46 @@
                 </form>
             </div>
         </nav>
-        <section class="carousel cutom-carousel">
-            <section class="artistInfo">
-                <h3 id="artistName">Artist Name</h3>
-                <div class="artistImage" style="background: #073245;">
-                    <img id="artistImg" alt="coverArt">
-                    <div>
+        <section class="artistInfo">
+            <h3 id="artistName">Artist Name</h3>
+            <div class="artistImage" style="background: #073245;">
+                <img id="artistImg" alt="coverArt">
+                <div>
 
-                    </div>
                 </div>
-            </section>
-            <section class="topSongs">
-                <div style="background: #073245;">
-                    <div>
-                        <h3 id="topTracks">Top Tracks</h3>
-                        <section class="trackList">
-                            <ul id="bestOf"></ul>
-                    </div>
-                </div>
-            </section>
-
-            <section class="albums">
-                <div style="background: #073245;">
-                    <div>
-                        <h3 id="knownAlbum">Artist Albums</h3>
-                        <section class="albumList">
-                            <ul id="listedAlbums">
-                            </ul>
-                    </div>
-                </div>
-            </section>
+            </div>
         </section>
-        <section class="row">
-            <section id="bio" style="margin-right: 20px;">
-                <h2 id="bio-text">About the Artist</h2>
-                <p id="bioInfo"></p>
-            </section>
-            <section id="related" style="margin-left: 20px;">
-                <h2 id="related-text">Related Acts</h2>
-                <ul id="relatedArtist">
-                </ul>
-            </section>
+
+        <section class="topSongs">
+            <div style="background: #073245;">
+                <div>
+                    <h3 id="topTracks">Top Tracks</h3>
+                    <section class="trackList">
+                        <ul id="bestOf"></ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="albums">
+            <div style="background: #073245;">
+                <div>
+                    <h3 id="knownAlbum">Artist Albums</h3>
+                    <section class="albumList">
+                        <ul id="listedAlbums">
+                        </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="bio">
+            <h2 id="bio-text">About the Artist</h2>
+            <p id="bioInfo"></p>
+        </section>
+
+        <section id="related">
+            <h2 id="related-text">Related Acts</h2>
+            <ul id="relatedArtist">
+            </ul>
         </section>
     </main>
     <footer>
@@ -86,7 +85,7 @@
                     <img class="left hide-on-med-and-down"
                         src="./assets/images/GitHub-Mark/PNG/GitHub-Mark-Light-64px.png" alt="GitHub Kitty logo">
                 </div>
-                <ul id="nav-mobile" class="center hide-on-med-and-down">
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="https://github.com/unheardof77" target="_blank" rel="noopener noreferrer">Morgan
                             Tolman</a></li>
                     <li><a href="https://github.com/LeoRocca40" target="_blank" rel="noopener noreferrer">Leo
