made mobile version formatted

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             </section>
         </section>
         <section class="row">
-            <section id="bio" style="margin-right: 20px;">
+            <section id="bio" style="margin: 20px;">
                 <h2 id="bio-text">About the Artist</h2>
                 <p id="bioInfo"></p>
             </section>
-            <section id="related" style="margin-left: 20px;">
+            <section id="related" style="margin: 20px;">
                 <h2 id="related-text">Related Acts</h2>
                 <ul id="relatedArtist">
                 </ul>
