--- a/mobile.html
+++ b/mobile.html
@@ -86,7 +86,7 @@
                     <img class="left hide-on-med-and-down"
                         src="./assets/images/GitHub-Mark/PNG/GitHub-Mark-Light-64px.png" alt="GitHub Kitty logo">
                 </div>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <ul id="nav-mobile" class="center hide-on-med-and-down">
                     <li><a href="https://github.com/unheardof77" target="_blank" rel="noopener noreferrer">Morgan
                             Tolman</a></li>
                     <li><a href="https://github.com/LeoRocca40" target="_blank" rel="noopener noreferrer">Leo
